--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.0.2)
-project(mpc_casadi)
+project(mobile_planning_test_env)
 
 add_compile_options(-std=c++11)
 
@@ -9,9 +9,6 @@ find_package(catkin REQUIRED COMPONENTS
   roscpp
   rospy
   laser_geometry
-  decomp_util
-  decomp_ros_msgs
-  decomp_ros_utils
 )
 
 catkin_package()
@@ -20,13 +17,8 @@ include_directories(${catkin_INCLUDE_DIRS})
 include_directories(${EIGEN3_INCLUDE_DIRS} ${DECOMP_UTIL_INCLUDE_DIRS})
 
 catkin_install_python(PROGRAMS
-  src/nmpc_node.py
-  scripts/odom_noise.py
-  scripts/scan2points.py
-  scripts/odom2pose.py
-  plotting/plot_tracking.py
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
 
-add_executable(collision_free_node src/collision_free.cpp)
-target_link_libraries(collision_free_node ${catkin_LIBRARIES} ${EIGEN3_LIBS} ${OpenCV_LIBS})
+# add_executable(collision_free_node src/collision_free.cpp)
+# target_link_libraries(collision_free_node ${catkin_LIBRARIES} ${EIGEN3_LIBS} ${OpenCV_LIBS})
