--- a/package.xml
+++ b/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>mpc_casadi</name>
+  <name>mobile_planning_test_env</name>
   <version>0.0.0</version>
-  <description>The mpc_casadi package</description>
+  <description>The mobile_planning_test_env package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
@@ -19,7 +19,7 @@
   <!-- Url tags are optional, but multiple are allowed, one per tag -->
   <!-- Optional attribute type can be: website, bugtracker, or repository -->
   <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/mpc_casadi</url> -->
+  <!-- <url type="website">http://wiki.ros.org/mobile_planning_test_env</url> -->
 
 
   <!-- Author tags are optional, multiple are allowed, one per tag -->
