--- a/simulation_setup/dynamic_obstacles/blue_cylinder_map2_1/model.config
+++ b/simulation_setup/dynamic_obstacles/blue_cylinder_map2_1/model.config
@@ -11,7 +11,7 @@
   </author>
 
   <description>
-    A dynamic blue cylinder used in mpc_casadi
+    A dynamic blue cylinder used in mobile_planning_test_env
   </description>
 
 </model>
